--- a/heapstat.vcproj
+++ b/heapstat.vcproj
@@ -187,12 +187,20 @@
 				RelativePath=".\heapstat.def"
 				>
 			</File>
+			<File
+				RelativePath=".\resource.h"
+				>
+			</File>
 		</Filter>
 		<Filter
 			Name="Resource"
 			Filter="rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav"
 			UniqueIdentifier="{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}"
 			>
+			<File
+				RelativePath=".\heapstat.rc"
+				>
+			</File>
 		</Filter>
 	</Files>
 	<Globals>
