--- a/heapstat.rc
+++ b/heapstat.rc
@@ -53,8 +53,8 @@ END
 //
 
 VS_VERSION_INFO VERSIONINFO
- FILEVERSION 1,2,0,0
- PRODUCTVERSION 2012,1,17,23
+ FILEVERSION 1,3,0,0
+ PRODUCTVERSION 2012,1,19,0
  FILEFLAGSMASK 0x17L
 #ifdef _DEBUG
  FILEFLAGS 0x1L
@@ -70,12 +70,12 @@ BEGIN
         BLOCK "000904b0"
         BEGIN
             VALUE "FileDescription", "heapstat debugger extension"
-            VALUE "FileVersion", "1, 2, 0, 0"
+            VALUE "FileVersion", "1, 3, 0, 0"
             VALUE "InternalName", "heapstat"
-            VALUE "LegalCopyright", "Copyright (C) 2011 Yoichi NAKAYAMA"
+            VALUE "LegalCopyright", "Copyright (C) 2011-2012 Yoichi NAKAYAMA"
             VALUE "OriginalFilename", "heapstat.dll"
             VALUE "ProductName", "heapstat debugger extension"
-            VALUE "ProductVersion", "2012, 1, 17, 23"
+            VALUE "ProductVersion", "2012, 1, 19, 0"
         END
     END
     BLOCK "VarFileInfo"
