add new command "bysize"
show statistics by userSize.

--- a/heapstat.vcproj
+++ b/heapstat.vcproj
@@ -316,6 +316,10 @@
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
 			<File
+				RelativePath=".\BySizeProcessor.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\common.c"
 				>
 			</File>
@@ -341,6 +345,10 @@
 			Filter="h;hpp;hxx;hm;inl;inc;xsd"
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
+			<File
+				RelativePath=".\BySizeProcessor.h"
+				>
+			</File>
 			<File
 				RelativePath=".\common.h"
 				>
